2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesystemmodel.c:
	* gtk/gtkprinter.c:
	* gtk/gtkwidget.c: Use g_value_set_static_string() where 
	appropriate.  (#515042, Christian Persch)

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/prop-editor.c: Fix a memory leak (#515039, Christian Persch)
	
2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	* tests/testmerge.c: Fix a memory leak (#515038, Christian Persch)

2008-02-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (recent_model_sort_drag_data_get):
	(recent_model_sort_drag_data_get):
	(search_model_sort_drag_data_get):
	* gtk/gtkfilesystemmodel.c (drag_source_drag_data_get):
	* gtk/gtkpathbar.c (button_drag_data_get_cb):
	Use gtk_selection_data_set_uris() instead of doing it
	by hand.  (#514890, Christian Persch)

2008-02-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkstatusicon.c: #include "gtkmain.h" for
	gtk_get_current_event_time().

2008-02-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkwindow.c (gtk_window_activate_key): simply use
	gtk_window_get_key_hash() to get the hash instead of manually
	fiddling with quarks and gtk_window_keys_changed(). Also add
	g_return_if_fail() to this public function.

2008-02-11  Matthias Clasen  <mclasen@redhat.com>

	Support keynav in status icons.  (#473786, Li Yuan)

	* gtk/gtkstatusicon.c: Handle keynav, make the tray icon focusable.

	* gtk/gtktrayicon-x11.c: Draw a focus rectangle when focused.

2008-02-11  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_reorder)
	* gtk/gtkiconview.c (gtk_icon_view_cell_layout_reorder): plug leak
	wrt. link deletion from list; contination of fix for #503569.

2008-02-11  Emmanuele Bassi  <ebassi@gnome.org>

	* gtk/gtkrecentchoosermenu.c:
	(gtk_recent_chooser_menu_constructor): Set no-show-all flag
	on the placeholder menu item.

	* tests/testrecentchoosermenu.c:
	(create_recent_chooser_menu): Use gtk_widget_show_all() to test